test/fail/webservice/empty.app
//#1 Synchronization framework requires at least one TopLevelEntity
application test

  entity User {
    name :: String
    webservice mapping {}
  }
 

  define page root(){}